# opencl-boilerplate

./: CMakeLists.txt  README.md
src/: main.cpp
